--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2475,3 +2475,22 @@ input, select, textarea {
 					}
 
 	}
+
+
+/* Efecto de zoom a la imagen*/
+	.zoom{
+        /* Aumentamos la anchura y altura durante 2 segundos */
+        transition: width 0.5s, height 0.5s, transform 0.5s;
+        -moz-transition: width 0.5s, height 0.5s, -moz-transform 0.5s;
+        -webkit-transition: width 0.5s, height 0.5s, -webkit-transform 0.5s;
+        -o-transition: width 0.5s, height 0.5s,-o-transform 0.5s;
+    }
+    .zoom:hover{
+        /* tranformamos el elemento al pasar el mouse por encima al doble de
+           su tamaño con scale(2). */
+        transform : scale(1.1);
+        -moz-transform : scale(1.1);      /* Firefox */
+        -webkit-transform : scale(1.1);   /* Chrome - Safari */
+        -o-transform : scale(1.1);        /* Opera */
+        box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.25), 0px 2px 3px 0px rgba(0, 0, 0, 0.10);
+    }
