--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -178,9 +178,10 @@ input, select, textarea {
 		letter-spacing: -0.015em;
 	}
 
-	h3 {
+	h3, b{
 		font-size: 1.2em;
 		letter-spacing: -0.015em;
+		color: #3ba8d3;
 	}
 
 	em, i {
